@@ -4,6 +4,11 @@ DBI::Changes - List of significant changes to the DBI
 
 =cut
 
+=head2 Changes in DBI 1.45 (svn rev 480),    6th October 2004
+
+  Fixed DBI::DBD code for drivers broken in 1.44.
+  Fixed "Free to wrong pool"/"Attempt to free unreferenced scalar" in FETCH.
+
 =head2 Changes in DBI 1.44 (svn rev 478),    5th October 2004
 
   Fixed build issues on VMS thanks to Jakob Snoer.
